--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gen-ai",
   "version": "0.1.2",
   "private": true,
+  "type": "module",
   "engines": {
     "node": "^20.12.0",
     "npm": "^10.5.0"
@@ -21,8 +22,8 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
+    "fs-extra": "^11.2.0",
     "next": "^14.1.4",
     "openai": "^4.33.0",
     "react": "^18.2.0",
